# househub

./: CMakeLists.txt  README.md  app.ini  conanfile.txt  househub.ini  househub.service
include/: app.h  capturer.h  capturer_factory.h  config_manager.h  file_manager.h  file_system.h  globals.h  icapturer.h  video_out_stream.h
src/: app.cpp  capturer.cpp  capturer_factory.cpp  config_manager.cpp  file_manager.cpp  main.cpp  video_out_stream.cpp
